[package]
name = "rust-learning"
version = "0.1.0"
authors = ["chenglong.wang <tiny.wcl@gmail.com>"]
edition = "2021"

[lib]
name = "rust_learning"
path = "src/lib.rs"
bench = false
test = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "main"
path = "src/bin/main.rs"

[[bin]]
name = "threads"
path = "src/bin/main_threads.rs"


[workspace]
members = [".", "my-proc-macro"]

[dependencies]
rayon = "1.3.0"
unicode-segmentation = "1.6.0"
lazy_static = "1.4.0"
rand = "0.8.4"
futures = "0.3.4"
my-proc-macro = { path = "./my-proc-macro", version = "0.1.0" }
derive_more = "0.99.0"
anyhow = "1.0.66"
once_cell = "1.16.0"
parking_lot = "0.12.1"

[features]
