[package]
name = "my-proc-macro"
version = "0.1.0"
authors = ["chenglong.wang <tiny.wcl@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
quote = "1.0.6"
syn = {version="1.0.30", features=["full"]}
proc-macro2 = "1.0.18"